public/stylesheets/mak.css
body {
  padding:0;
  width:100%;
  border-top:6px solid #c41101;
}

#content {
  position:relative;
  z-index:5;
  padding-top:24px;
  background:#888888;
  box-shadow:inset 0px 3px 5px -2px #555555, inset 0px -3px 5px -2px #555555;
  -webkit-box-shadow:inset 0px 3px 5px -2px #555555, inset 0px -3px 5px -2px #555555;
}

#content a {
  text-decoration:none;
}

#top, #bottom {
  width:806px;
  padding:10px 0;
}

#top {
  position:relative;
  z-index:3000;
  margin:12px auto 16px;
  background:url(http://markson.hk/static/images/marksonz.png) 0 18px no-repeat;
}

#top hgroup {
  text-indent:-9999px;
}

#bottom {
  margin:24px auto;
  text-align:center;
  font-family:'Arvo', helvetica, arial, serif;
}

.flash {
  text-align:center;
  color:#ffffff;
  margin-bottom:12px;
}

.notice {
  background:#1be022;
}

.alert {
  background:#e01b1b;
}

#artists, #videos {
  width:826px;
  margin:0 auto;
  padding-bottom:1px;
}

#video {
  width:826px;
  margin:0 auto;
  margin-top:-24px;
  padding:0 auto;
  text-align:center;
  background:#000000;
  box-shadow:3px 0px 2px -1px #333333, -3px 0px 2px -1px #333333;
  -webkit-box-shadow:3px 0px 2px -1px #333333, -3px 0px 2px -1px #333333;
}

#video h1 {
  position:absolute;
  overflow:hidden;
  width:814px;
  font-size:32px;
  line-height:36px;
  padding:6px;
  color:#ffffff;
  background:#000000;
  font-family:'Arvo', helvetica, arial, serif;
  text-shadow:0 -2px 0 #555555;
}

.box {
  margin:0 10px 24px 10px;
  display:inline-block;
  list-style:none;
  width:252px;
  height:189px;
  box-shadow:0 0 6px #000000;
  -webkit-box-shadow:0 0 6px #000000;
  font-family:'Arvo', arial, serif;
}

.box {
  *display:inline;
}

.ads {
  width:244px;
  height:181;
  box-shadow:0 0 6px #b20400, inset 0 0 6px #888888;
  -webkit-box-shadow:0 0 6px #b20400, inset 0 0 6px #888888;
  background:url(http://markson.hk/static/images/makadsbg.png) repeat;
  border:4px solid #ffffff;
}

.ads {
  width:244px;
  height:181px;
}

.box h1 {
  width:252px;
  height:40px;
  line-height:40px;
  font-size:22px;
  text-align:center;
  position:absolute;
  margin-top:72px;
  background:#000000;
  opacity:0.6;
  color:#ffffff;
}

.box img {
  width:252px;
  height:189px;
  position:absolute;
  z-index:1;
}

.box span {
  position:relative;
  bottom:80px;
}

.count {
  z-index:6;
  position:relative;
  float:right;
  top:-10px;
  right:-10px;
  width:27px;
  height:27px;
  line-height:27px;
  border: 2px solid #ffffff;
  border-radius:16px;
  background:#c41104;
  color:#ffffff;
  font-size:18px;
  font-family:sans-serif;
  text-align:center;
  box-shadow:0 0 6px #000000;
  -webkit-box-shadow:0 0 6px #000000;
}

#poster {width:100%;}
#poster a {background:#000000 url(http://markson.hk/static/images/poster.jpg) no-repeat;height:100px;display:block;width:100%;}
#poster span {cursor:pointer;color:#ffffff;height:20px;line-height:22px;border-radius:5px;background:#000000;float:right;padding:1px 6px;position:relative;top:5px;right:5px;opacity:0.36}

#nice {height:40px;line-height:24px;font-family:'Arvo';background:#ffffff;border:1px solid #cccccc;}
#nice a {text-decoration:none;display:block;text-align:center;color:#666666;padding:8px 16px 8px 8px;}
#nice ul {list-style:none;}
#nice li {vertical-align:top;}
#home a {text-indent:-999em;width:32px;background:url(http://markson.hk/static/images/home.png) no-repeat 14px center;}
.def {display:inline-block;background:#ffffff url(http://markson.hk/static/images/uli.png) no-repeat right center;}
.def {*display:inline;}
.sub {position:relative;}
.sub ul {z-index:999;background:#ffffff;visibility:hidden;position:absolute;top:41px;left:-16px;width:200px;border:2px solid #dddddd;border-top-width:1px;}
.sub ul a {display:inline-block;padding:8px !important;border-top:1px solid #dddddd;}
.sub ul a:hover {background:#eeeeee;}
.sf-sub-indicator {display:inline-block;position:relative;left:3px;width:12px;text-indent:-999em;background:#ffffff url(http://markson.hk/static/images/adx.png) no-repeat center;}

